--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 /* *************dropdown menubar************** */
 .navbar {
   padding: 10px !important;
@@ -61,11 +65,12 @@ li.dropdown:hover ul.dropdown-menu {
   font-family: 'Roboto', sans-serif;
   text-transform: uppercase;
   padding: 0px !important;
-  font-size: 15px;
+  font-size: 13px;
 }
 
 ul.navbar-nav li.nav-item {
-  margin: 0 20px;
+  /* margin: 0 20px; */
+  padding-left: 15px;
 }
 
 ul.navbar-nav .nav-item:after {
@@ -83,12 +88,88 @@ ul.navbar-nav .nav-item:after {
 
 /* ***************dropdown menubar end************** */
 
+/* ***************News Ticker************** */
+.tcontainer {
+  width: 100%;
+  overflow: hidden;
+}
+
+.ticker-wrap {
+  width: 100%;
+  padding-left: 100%;
+  background-color: #eee;
+}
+
+@keyframes ticker {
+  100% {
+    transform: translate3d(-100%, 0, 0);
+  }
+}
+
+.ticker-move {
+  display: inline-block;
+  white-space: nowrap;
+  padding-right: 100%;
+  animation-timing-function: linear;
+  animation: ticker 20s infinite;
+}
+
+.ticker-move:hover {
+  animation-play-state: paused;
+}
+
+.ticker-item {
+  display: inline-block;
+  padding: 0 40px;
+  font-size: 20px;
+}
+
+/* ***************News Ticker End************** */
+
+
 
 
 /* *******************head-1****************** */
 .head-1 {
-  background-color: #0cb8b6 !important;
+  background-color: #494848 !important;
   color: white;
+
+}
+
+.bt_1 {
+  text-align: center;
+  /* background-color: chocolate;  */
+  margin: auto;
+  display: table;
+  padding: 5px;
+  /* margin-top: -16px; */
+  border: 2px solid rgb(63, 102, 105);
+  border-radius: 5px;
+
+}
+
+.input_1 {
+  border: 2px solid rgb(218, 49, 49);
+  width: 50%;
+  margin-top: 25px;
+  padding: 5px;
+}
+
+.input_2 {
+  border: 2px solid rgb(218, 49, 49);
+  width: 30%;
+  margin-top: 25px;
+  padding: 5px;
+}
+
+.btn_1 {
+  padding: 10px;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+  margin-left: -7px;
+  background-color: red;
+  color: white;
+
 }
 
 
@@ -97,6 +178,11 @@ ul.navbar-nav .nav-item:after {
 
 
 /* **************************Slider *****************************/
+
+.text-2 {
+  line-height: 60px;
+  padding: 15px;
+}
 
 #myCarousel .carousel-item .mask {
   height: 100%;
@@ -151,8 +237,8 @@ ul.navbar-nav .nav-item:after {
   -webkit-animation-name: slideInRight;
   animation-name: slideInRight;
   display: block;
-  height: auto;
-  max-width: 100%;
+  height: 250px;
+  width: 100%;
 }
 
 #myCarousel h4,
@@ -336,15 +422,119 @@ ul.navbar-nav .nav-item:after {
 }
 
 /* **************************Slider End*****************************/
+/* =================Authority================= */
 
+
+.demo {
+  background-color: rgb(27, 101, 104);
+
+}
+
+.testimonial {
+  /* margin: 50px 30px 30px 30px; */
+  text-align: center;
+  position: relative;
+}
+
+.testimonial .description {
+  padding: 30px;
+  margin-bottom: 80px;
+  border-left: 1px solid #fff;
+  font-size: 15px;
+  color: #fff;
+  line-height: 33px;
+  position: relative;
+}
+
+.testimonial .description:before,
+.testimonial .description:after {
+  content: "";
+  width: 20%;
+  height: 1px;
+  background: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.testimonial .description:after {
+  top: auto;
+  bottom: 0;
+}
+
+.testimonial .title {
+  display: block;
+  font-size: 20px;
+  font-weight: 600;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin: 0 0 15px 0;
+  position: relative;
+}
+
+.testimonial:before,
+.testimonial .title:before {
+  content: "";
+  width: 1px;
+  height: 50px;
+  background: #fff;
+  margin: 0 auto;
+  position: absolute;
+  top: -50px;
+  left: 0;
+  right: 0;
+}
+
+.testimonial .title:before {
+  top: -80px;
+}
+
+.testimonial .pic {
+  display: inline-block;
+  width: 200px;
+  padding: 10px;
+  background-color: honeydew;
+  border-radius: 5px;
+  height: 200px;
+}
+
+.testimonial .pic img {
+  width: 100%;
+  height: 100%;
+}
+
+.owl-theme .owl-controls {
+  margin-top: 0;
+}
+
+.owl-theme .owl-controls .owl-page span {
+  width: 10px;
+  height: 10px;
+  border-radius: 0;
+  background: #000;
+  outline: 2px solid #000;
+  outline-offset: 2px;
+  margin-right: 8px;
+  opacity: 0.7;
+  transition: all 0.3s ease 0s;
+}
+
+.owl-theme .owl-controls .owl-page.active span {
+  background: #fff;
+  outline: 2px solid #fff;
+}
+
+/* =================Authority end================ */
 
 /* ******************** About Us ************************* */
 .bot-1 {
   background-color: coral;
-  padding: 10px;
+  padding: 5px;
   color: white;
-  border-radius: 10px;
-  float: right;
+  border-radius: 5px;
+  margin-top: 5PX;
+
 }
 
 .bot-1:hover {
@@ -355,18 +545,7 @@ ul.navbar-nav .nav-item:after {
 
 /* ******************** About Us End************************* */
 
-/* ******************** Testiomonial************************* */
-.nav-tabs {
-  border-bottom: none;
-}
-
-.nav-tabs .nav-item.show .nav-link,
-.nav-tabs .nav-link.active,
-.nav-tabs,
-.nav-tabs .nav-link:focus,
-.nav-tabs .nav-link:hover {
-  border: none;
-}
+/* ******************** Text design************************* */
 
 .h2,
 h2 {
@@ -397,166 +576,283 @@ h6 {
   color: #1c223a;
 }
 
-.client-testimonial .drop-shadow {
-  -webkit-filter: drop-shadow(0px 15px 50px rgba(2, 173, 136, 0.2));
-  -moz-filter: drop-shadow(0px 15px 50px rgba(2, 173, 136, 0.2));
-  -o-filter: drop-shadow(0px 15px 50px rgba(2, 173, 136, 0.2));
-  filter: drop-shadow(0px 15px 50px rgba(2, 173, 136, 0.2));
+
+
+
+/* ******************** Text design End************************* */
+
+
+
+/* ******************Image Gallery******************** */
+
+.container.gallery-container {
+  background-color: #fff;
+  color: #35373a;
+  min-height: 100vh;
+  padding: 30px 50px;
 }
 
-.bg-5 {
-  background-image: url(back-1.png);
-  background-position: center 65%;
-  background-size: auto;
-  background-repeat: no-repeat;
+.gallery-container h1 {
+  text-align: center;
+  margin-top: 50px;
+  font-family: 'Droid Sans', sans-serif;
+  font-weight: bold;
 }
 
-.client-testimonial .client-nav .nav-item {
+.gallery-container p.page-description {
+  text-align: center;
+  margin: 25px auto;
+  font-size: 18px;
+  color: #999;
+}
+
+.tz-gallery {
+  padding: 40px;
+}
+
+/* Override bootstrap column paddings */
+.tz-gallery .row>div {
+  padding: 2px;
+}
+
+.tz-gallery .lightbox img {
+  width: 100%;
+  height: 100%;
+  border-radius: 0;
+  position: relative;
+  padding: 5px;
+  background-color: teal;
+  border-radius: 50px;
+}
+
+.tz-gallery .lightbox:before {
   position: absolute;
-  z-index: 5;
-  width: 10.5rem;
+  top: 50%;
+  left: 50%;
+  margin-top: -13px;
+  margin-left: -13px;
+  opacity: 0;
+  color: #fff;
+  font-size: 26px;
+  font-family: 'Glyphicons Halflings';
+  content: 'click';
+  pointer-events: none;
+  z-index: 9000;
+  transition: 0.4s;
+
 }
 
-.client-testimonial .client-nav .nav-item:nth-child(1) {
-  top: 2.5rem;
-  right: 16%;
-  width: 7rem;
-}
 
-.client-testimonial .client-nav .nav-item:nth-child(2) {
-  bottom: 3rem;
-  right: 0;
-}
-
-@media (min-width: 1281px) {
-  .client-testimonial .client-nav .nav-item:nth-child(2) {
-    right: -3rem;
-  }
-}
-
-.client-testimonial .client-nav .nav-item:nth-child(3) {
-  bottom: 9rem;
-  left: 4%;
-}
-
-.client-testimonial .client-nav .nav-item:nth-child(4) {
-  top: -2rem;
+.tz-gallery .lightbox:after {
+  position: absolute;
+  top: 0;
   left: 0;
-  width: 7rem;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background-color: rgba(46, 132, 206, 0.7);
+  content: '';
+  color: white;
+  transition: 0.4s;
+  border-radius: 50px;
 }
 
-@media (min-width: 1281px) {
-  .client-testimonial .client-nav .nav-item:nth-child(4) {
-    left: -8rem;
+.tz-gallery .lightbox:hover:after,
+.tz-gallery .lightbox:hover:before {
+  opacity: 1;
+}
+
+.baguetteBox-button {
+  background-color: transparent !important;
+}
+
+@media(max-width: 768px) {
+  body {
+    padding: 0;
   }
 }
 
-.client-testimonial .client-nav .nav-item:nth-child(5) {
-  top: -9rem;
-  right: 0;
-  width: 7rem;
-}
+/* ******************Image Gallery End******************** */
+/* <!-- *****************************Video Gallery******************************* --> */
 
-@media (min-width: 1281px) {
-  .client-testimonial .client-nav .nav-item:nth-child(5) {
-    right: -5.5rem;
-  }
-}
-
-@media (max-width: 767.98px) {
-  .client-testimonial .client-nav .nav-item {
-    position: relative !important;
-    top: 0 !important;
-    left: 0 !important;
-    right: inherit;
-    width: 7rem !important;
-  }
-}
-
-.client-testimonial .tab-content .fade {
-  -webkit-transition: all 0.4s ease-in;
-  -o-transition: all 0.4s ease-in;
-  transition: all 0.4s ease-in;
-}
-
-.client-testimonial .tab-content .client-thumb {
-  width: 10.5rem;
-}
-
-.client-testimonial .tab-content .client-desc {
-  -webkit-box-shadow: 0px 15px 50px 0px rgba(115, 115, 115, 0.06);
-  box-shadow: 0px 15px 50px 0px rgba(115, 115, 115, 0.06);
-  min-height: 21rem;
-  padding: 2rem;
-}
-
-.client-testimonial .tab-content .client-desc h6 {
-  font-size: 1.3rem;
-}
-
-.section-ptb,
-.section-pt,
-.section-pb {
-  padding-top: 12rem;
-  padding-bottom: 12rem;
-}
-
-@media (min-width: 768px) and (max-width: 991.98px) {
-
-  .section-ptb,
-  .section-pt,
-  .section-pb {
-    padding-top: 8rem;
-    padding-bottom: 8rem;
-  }
-}
-
-@media (max-width: 767.98px) {
-
-  .section-ptb,
-  .section-pt,
-  .section-pb {
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-  }
-}
-
-hr.line {
+h4 {
+  font-family: 'Open Sans';
   margin: 0;
-  border-color: #1c223a;
-  border-width: 1px;
-  width: 4.5rem;
 }
 
-hr.line.line-sm {
-  width: 8.6rem;
+.modal,
+body.modal-open {
+  padding-right: 0 !important
 }
 
-hr.line.bw-2 {
-  border-width: 2px;
+body.modal-open {
+  overflow: auto
 }
 
-.mb-5 {
-  margin-bottom: 0.5rem !important;
+body.scrollable {
+  overflow-y: auto
 }
 
-.mb-80 {
-  margin-bottom: 8rem !important;
+.modal-footer {
+  display: flex;
+  justify-content: flex-start;
+
+  .btn {
+    position: absolute;
+    right: 10px;
+  }
 }
 
-.mb-20 {
-  margin-bottom: 2rem !important;
+.card-img-top {
+  height: 260px;
 }
 
-.mb-25 {
-  margin-bottom: 2.5rem !important;
+/* <!-- *****************************Video Gallery End******************************* --> */
+
+/* <!-- *****************************publication******************************* --> */
+
+.img-27 {
+  height: 200px;
+  width: 100%;
 }
 
-img {
-  max-width: 100%;
+.card {
+  cursor: pointer;
+  transition: all .4s ease-in-out;
 }
 
-/* ******************** Testiomonial End************************* */
+.card:hover {
+  transform: scale(1.05);
+  box-shadow: 10px 10px 10px #888888;
+}
+
+.txt-9 {
+  text-align: center;
+  background-color: rgb(219, 214, 214);
+  padding: 10px;
+  margin-top: 10px;
+}
+
+.txt-10 {
+  text-align: center;
+  background-color: rgb(219, 214, 214);
+  padding: 10px;
+}
+
+.modal-btn2 {
+  width: 90px;
+  font-size: 12px;
+  margin: auto;
+  text-align: center;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  background-color: teal;
+  color: white;
+}
+
+/* <!-- *****************************publication end******************************* --> */
+
+
+
+/* <!-- **********user-profile-1********* --> */
+.avatar {
+  border: 0.3rem solid rgba(#fff, 0.3);
+  margin-top: -6rem;
+  margin-bottom: 1rem;
+  max-width: 9rem;
+}
+
+.txt-3 {
+  text-align: center;
+  background-color: rgb(219, 214, 214);
+  padding: 10px;
+  margin-top: 20px;
+}
+
+.txt-4 {
+  text-align: center;
+  padding: 10px;
+  margin-top: 10px;
+  border-top: 2px solid rgb(219, 214, 214);
+  border-bottom: 2px solid rgb(219, 214, 214);
+
+}
+
+.img-5 {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 2px solid rgb(71, 156, 173);
+}
+
+.img-center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.t-btn {
+  border-radius: 10px;
+  width: 60px;
+  background-color: tomato;
+  color: white;
+}
+
+
+.sidebar {
+  background-color: #f1f1f1;
+  height: 100%;
+  overflow: auto;
+}
+
+.sidebar a {
+  display: block;
+  color: black;
+  padding: 16px;
+  text-decoration: none;
+}
+
+.sidebar a.active {
+  background-color: #4CAF50;
+  color: white;
+  text-decoration: none;
+
+}
+
+.sidebar a:hover:not(.active) {
+  background-color: #555;
+  color: white;
+  text-decoration: none;
+
+}
+
+@media screen and (max-width: 700px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+
+  .sidebar a {
+    float: left;
+  }
+
+  div.content {
+    margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .sidebar a {
+    text-align: center;
+    float: none;
+  }
+}
+
+/* <!-- **********user-profile-1 End********* --> */
+
+
+
 
 /* *********Footer******************* */
 /*footer*/
